Install specified Piwik versin
Instead of pulling latest version available, specify version 3.0.4 to be installed on the server and verify against pre-calculated hash.

Update database dump.

--- a/install/tasks/main.yml
+++ b/install/tasks/main.yml
@@ -3,7 +3,7 @@
     PIWIK_RELEASE_ID: "{{ [ansible_date_time.year, ansible_date_time.month, ansible_date_time.day, ansible_date_time.hour, ansible_date_time.minute, ansible_date_time.second] | join('') }}"
 
 - name: Download files
-  get_url: url={{ piwik_download_path }} dest={{ app_path }}/tmp/piwik.zip
+  get_url: url={{ piwik_download_path }} dest={{ app_path }}/tmp/piwik.zip checksum=sha256:{{ piwik_download_hash }}
 
 - name: Create release folder
   file:
