--- a/prepare/php/tasks/main.yml
+++ b/prepare/php/tasks/main.yml
@@ -1,29 +1,30 @@
 # Install Piwik dependencies
 - name: Add repo
   apt_repository:
-    repo: 'ppa:ondrej/php5'
+    repo: 'ppa:ondrej/php'
 
 - name: "Install PHP dependencies"
   apt: name={{ item }} update_cache=yes state=latest
   with_items:
-    - 'php5'
-    - 'php5-mysql'
-    - 'php5-gd'
-    - 'php5-geoip'
-    - 'php5-ldap'
-    - 'php5-fpm'
-    - 'php5-cli'
+    - 'php7.1'
+    - 'php7.1-mysql'
+    - 'php7.1-gd'
+    - 'php7.1-geoip'
+    - 'php7.1-ldap'
+    - 'php7.1-fpm'
+    - 'php7.1-cli'
+    - 'php7.1-mbstring'
+    - 'php7.1-xml'
 
 - name: Configure php-fpm php.ini
   template:
     src: php-fpm.ini.j2
-    dest: /etc/php5/fpm/php.ini
+    dest: /etc/php/7.1/fpm/php.ini
 
 - name: Configure php-fpm www.conf
   template:
     src: php-fpm-www.conf.j2
-    dest: /etc/php5/fpm/pool.d/www.conf
+    dest: /etc/php/7.1/fpm/pool.d/www.conf
 
 - name: Restart PHP FPM
-  shell: service php5-fpm restart
-
+  shell: service php7.1-fpm restart
