--- a/prepare/environment/tasks/main.yml
+++ b/prepare/environment/tasks/main.yml
@@ -15,5 +15,7 @@
 
 - name: Configure
   template:
+    owner: "{{ deploy_owner | default(app_user, true) }}"
+    group: "{{ deploy_group | default(app_user, true) }}"
     src: config.ini.php.j2
     dest: "{{ deploy_path | default(app_path, true) }}/shared/config/config.ini.php"
