Setup queuedtracking plugin

--- a/prepare/php/tasks/main.yml
+++ b/prepare/php/tasks/main.yml
@@ -15,6 +15,7 @@
     - 'php7.1-cli'
     - 'php7.1-mbstring'
     - 'php7.1-xml'
+    - 'php-redis'
 
 - name: Configure php-fpm php.ini
   template:
