--- a/install/tasks/main.yml
+++ b/install/tasks/main.yml
@@ -5,6 +5,9 @@
 - name: Download files
   get_url: url={{ piwik_download_path }} dest={{ app_path }}/tmp/piwik.zip checksum=sha256:{{ piwik_download_hash }}
 
+- name: Download QueuedTracking Plugin
+  get_url: url={{ piwik_queuedtracking_plugin_path }} dest={{ app_path }}/tmp/queuedtracking.zip checksum=sha256:{{piwik_queuedtracking_plugin_hash }}
+
 - name: Create release folder
   file:
     path: "{{ deploy_path | default(app_path, true) }}/releases/{{ PIWIK_RELEASE_ID }}"
@@ -14,6 +17,11 @@
 
 - name: Extract archive
   unarchive: src={{ app_path }}/tmp/piwik.zip dest={{ app_path }}/tmp
+- name: Extract QueuedTracking plugin archive
+  unarchive:
+    src: "{{ app_path }}/tmp/queuedtracking.zip"
+    dest: "{{ app_path }}/tmp/piwik/plugins"
+    remote_src: yes
 
 - name: Copy files to destiny
   command: mv {{ app_path }}/tmp/piwik {{ app_path }}/releases/{{ PIWIK_RELEASE_ID }}/
@@ -41,6 +49,9 @@
     src: "{{ app_path }}/shared/config/config.ini.php"
     state: link
     force: yes
+
+- name: Activate QueuedTracking plugin
+  command:  "{{ app_path }}/releases/{{ PIWIK_RELEASE_ID }}/piwik/console plugin:activate QueuedTracking"
 
 - name: Link current
   file:
