Add Travis CI testing based on geerlingguy test shim, but with the added option to link containers.
Fix dependencies, remove handle (breaks test and is not necessary for code changes)

--- a/prepare/mysql/tasks/main.yml
+++ b/prepare/mysql/tasks/main.yml
@@ -2,9 +2,14 @@
 - name: "Install MySQL dependencies"
   apt: name={{ item }} update_cache=yes state=latest
   with_items:
-
-    - python3-mysqldb
+    - python-dev
+    - libmysqlclient-dev
+    - python-pip
     - mariadb-client-10.0
+    - python-mysqldb
+
+- name: "Install Python mysql module"
+  pip: name=MySQL-python
 
 # Manage Piwik database
 - name: "Manage Piwik db"
